@@ -1,15 +1,16 @@
 package com.sx4.events;
 
-import static com.rethinkdb.RethinkDB.r;
-
 import java.util.ArrayList;
-import java.util.HashMap;
+import java.util.Arrays;
 import java.util.List;
-import java.util.Map;
 
-import com.rethinkdb.net.Connection;
-import com.rethinkdb.net.Cursor;
+import org.bson.Document;
+
+import com.mongodb.client.model.Filters;
+import com.mongodb.client.model.Projections;
+import com.mongodb.client.model.Updates;
 import com.sx4.core.Sx4Bot;
+import com.sx4.database.Database;
 
 import net.dv8tion.jda.api.OnlineStatus;
 import net.dv8tion.jda.api.entities.User;
@@ -19,48 +20,38 @@ import net.dv8tion.jda.api.sharding.ShardManager;
 
 public class AwaitEvents extends ListenerAdapter {
 	
-	private static List<Map<String, Object>> awaitData = new ArrayList<>();
+	private static List<Document> awaitData = new ArrayList<>();
 	
-	public static List<Map<String, Object>> getAwaitData() {
+	public static List<Document> getAwaitData() {
 		return awaitData;
 	}
 	
-	@SuppressWarnings("unchecked")
-	public static void addUsers(String authorId, List<String> userIds) {
-		for (Map<String, Object> userData : awaitData) {
-			if (userData.get("id").equals(authorId)) {
-				List<String> usersData = (List<String>) userData.get("users");
+	public static void addUsers(long authorId, List<Long> userIds) {
+		for (Document userData : awaitData) {
+			if (userData.getLong("_id") == authorId) {
+				List<Long> usersData = userData.getEmbedded(List.of("await", "users"), new ArrayList<>());
 				usersData.addAll(userIds);
-				
-				awaitData.remove(userData);
 				userData.put("users", usersData);
-				awaitData.add(userData);
-				
 				return;
 			}
 		}
 		
-		Map<String, Object> userData = new HashMap<>();
-		userData.put("id", authorId);
-		userData.put("users", userIds);
+		Document userData = new Document("id", authorId)
+				.append("users", userIds);
+		
 		awaitData.add(userData);
 	}
 	
-	public static void addUsers(String authorId, String... userIds) {
-		AwaitEvents.addUsers(authorId, List.of(userIds));
+	public static void addUsers(long authorId, Long... userIds) {
+		AwaitEvents.addUsers(authorId, Arrays.asList(userIds));
 	}
 	
-	@SuppressWarnings("unchecked")
-	public static void removeUser(String authorId, String userId) {
-		for (Map<String, Object> userData : awaitData) {
-			if (userData.get("id").equals(authorId)) {
-				List<String> usersData = (List<String>) userData.get("users");
+	public static void removeUser(long authorId, long userId) {
+		for (Document userData : awaitData) {
+			if (userData.getLong("id") == authorId) {
+				List<Long> usersData = userData.getEmbedded(List.of("await", "users"), new ArrayList<>());
 				usersData.remove(userId);
-				
-				awaitData.remove(userData);
 				userData.put("users", usersData);
-				awaitData.add(userData);
-				
 				return;
 			}
 		}
@@ -69,25 +60,25 @@ public class AwaitEvents extends ListenerAdapter {
 	}
 	
 	public static void ensureAwaitData() {
-		try (Cursor<Map<String, Object>> cursor = r.table("await").run(Sx4Bot.getConnection())) {
-			awaitData = cursor.toList();
-		}
+		awaitData = Database.get().getUsers().find().projection(Projections.include("await.users")).into(new ArrayList<>());
 	}
 
-	@SuppressWarnings("unchecked")
 	public void onUserUpdateOnlineStatus(UserUpdateOnlineStatusEvent event) {
 		if (event.getOldOnlineStatus().equals(OnlineStatus.OFFLINE) && !event.getNewOnlineStatus().equals(OnlineStatus.OFFLINE)) {
-			Connection connection = Sx4Bot.getConnection();
 			ShardManager shardManager = Sx4Bot.getShardManager();
 			
-			List<Map<String, Object>> data = awaitData;
-			for (Map<String, Object> userData : data) {
-				List<String> users = (List<String>) userData.get("users");
-				if (users.contains(event.getUser().getId())) {
-					AwaitEvents.removeUser((String) userData.get("id"), event.getUser().getId());
-					r.table("await").get(userData.get("id")).update(row -> r.hashMap("users", row.g("users").filter(d -> d.ne(event.getUser().getId())))).runNoReply(connection);
+			for (Document userData : AwaitEvents.getAwaitData()) {
+				List<Long> users = userData.getEmbedded(List.of("await", "users"), new ArrayList<>());
+				if (users.contains(event.getUser().getIdLong())) {
+					AwaitEvents.removeUser(userData.getLong("_id"), event.getUser().getIdLong());
 					
-					User notifiedUser = shardManager.getUserById((String) userData.get("id"));
+					Database.get().updateUserById(userData.getLong("_id"), Updates.pull("await.users", Filters.eq("id", event.getUser().getIdLong())), (result, exception) -> {
+						if (exception != null) {
+							exception.printStackTrace();
+						}
+					});
+					
+					User notifiedUser = shardManager.getUserById(userData.getLong("_id"));
 					if (notifiedUser != null) {
 						notifiedUser.openPrivateChannel().queue(channel -> channel.sendMessage("**" + event.getUser().getAsTag() + "** is now online<:online:361440486998671381>").queue(), e -> {});
 					}
